# click-rich-cli-demo

./: QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
stem_demo/: __init__.py
stem_demo/cli/: __init__.py  main.py  separate.py
stem_demo/core/: __init__.py  processor.py
stem_demo/utils/: __init__.py  console.py
